<resources>
    <string name="app_name">PacMacro</string>
    <string name="title_activity_map">Game in Progress</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="spectator_fragment_title">Choose a team</string>
    <string name="player_fragment_title">Choose a player</string>
    <string name="pacman_name">Pacman</string>
    <string name="inky_name">Inky</string>
    <string name="blinky_name">Blinky</string>
    <string name="pinky_name">Pinky</string>
    <string name="clyde_name">Clyde</string>
    <string name="start_button_title">Start!</string>
    <string name="player_activity_stop_service">Stop</string>
    <string name="player_service_notification_title">PacMacro Running</string>
    <string name="player_service_notification_text">PacMacro location service is running in the background.</string>
    <string name="player_activity_tag">Tag Player</string>
    <string name="player_tag_select">Select a character</string>
    <string name="player_activity_stop_warning_title">Confirm Stop</string>
    <string name="player_activity_stop_warning_body">Players are restricted from using the rest of the app while playing. If you stop playing, your character will be removed from the game. Do you want to stop playing?</string>
    <string name="player_activity_stop_warning_positive">Yes, stop playing</string>
    <string name="player_activity_stop_warning_negative">No, keep playing</string>
    <string name="action_credits">Credits</string>
    <string name="mobify_logo_content_description">Mobify logo</string>
    <string name="csss_logo_content_description">CSSS logo</string>
    <string name="credits_activity_sponsors_heading">Sponsors</string>
    <string name="pacman_team_name">Pacman\'s Team</string>
    <string name="ghost_team_name">Ghosts\' Team</string>
    <string name="dialog_title_select_team">Please Select a Team</string>
    <string name="dialog_title_confirm_team">Confirm Team Selection</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_title_select_player">Please Select a Player</string>
    <string name="dialog_message_pacman_confirm_team">You chose Pacman\'s team</string>

    <!-- PlayerActivity -->
    <string name="go_to_settings">Go to settings</string>
    <string name="gps_alert_dialog_msg">Location is required for this application. Please turn on Location on yor device to continue playing.</string>
    <string name="warning">Warning</string>
    <string name="location_permission_dialog_msg">Location permissions are required to play this game. Please visit Settings to allow the app to access this device\'s Location.</string>
    <string name="ok">Ok</string>

    <!-- Lobby Activity -->
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit from app?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
